Car management/force-app/main/default/objects/Service_quality_info__c/Service_quality_info__c.object-meta.xml
<CustomObject>
    <label>Service quality info</label>
    <nameField>
        <label>Service quality info id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service quality infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>