Car management/force-app/main/default/objects/Service_quality_info__c/fields/Rating_Show__c.field-meta.xml
<CustomField>
    <fullName>Rating_Show__c</fullName>
    <label>Rating Salon</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>