Car management/force-app/main/default/objects/Service_quality_info__c/fields/SalonID__c.field-meta.xml
<CustomField>
    <fullName>SalonID__c</fullName>
    <label>SalonID</label>
    <referenceTo>Salon__c</referenceTo>
    <relationshipLabel>Service quality infos</relationshipLabel>
    <relationshipName>Service_quality_infos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>